--- a/css/aboutMedia.css
+++ b/css/aboutMedia.css
@@ -33,7 +33,7 @@
         height: 305px;
         margin: initial;
     }
-    .worker .worket__about{
+    .worker .worker__about{
         width: 195px;
         height: 90%;
     }
@@ -82,24 +82,24 @@
         width: 100%;
         height: 100%;
     }
-    .worker .worket__about {
+    .worker .worker__about {
         width: 80%;
         height: 90%;
     }
-    .worker .worket__about .worker__name {
+    .worker .worker__about .worker__name {
         font-size: 14px;
     }
 
-    .worker .worket__about .worker__role {
+    .worker .worker__about .worker__role {
         font-size: 12px;
     }
 }
 @media (max-width: 360px) {
-    .worker .worket__about .worker__name{
+    .worker .worker__about .worker__name{
         font-size: 12px;
         margin-bottom: 4px;
     }
-    .worker .worket__about .worker__role {
+    .worker .worker__about .worker__role {
         font-size: 11px;
     }
 }
