--- a/css/projectMedia.css
+++ b/css/projectMedia.css
@@ -51,7 +51,7 @@
         max-width: initial;
         min-width: initial;
     }
-    .click_change_slide{
+    .project_main .click_change_slide{
         display: none;
     }
     .project_content_block .project_name{
