--- a/css/project.css
+++ b/css/project.css
@@ -313,14 +313,14 @@
 .project_main_block .description{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
 }
 .project_main_block{
     height: 100vh;
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
 }
 .project_main_block .project_name{
     font-size: 56px;
@@ -358,23 +358,39 @@
 
 }
 .project_main_block .line_up{
-    width: 80%;
+    width: 65%;
     position: relative;
-
     padding: 35px 0 35px;
-    top: -60px;
+    top: -125px;
+}
+.project_main_block .line_up .col-12{
+    padding-right: 0;
+}
+@media (max-width: 1140px) {
+    div.project_main_block .project_name{
+        font-size: 45px;
+    }
+    div.project_main_block .line_up{
+        top: -105px;
+    }
 
+    div.project_main_block .board_line{
+        height: 70px;
+        padding: 20px 15px 16px;
+    }
 }
 .line_up_left{
+    left: 0px;
     margin-right: auto;
 }
 .line_up_right{
+    left: -15px;
     margin-left: auto;
 }
 .project_main_block .board_line{
-    background: #23504B;
-    padding: 48px 15px 16px;
-    height: 130px;
+    background: rgb(35, 80, 75);
+    padding: 33px 15px 16px;
+    height: 90px;
 }
 
 .project_main_block .board_line p{
