--- a/css/project.css
+++ b/css/project.css
@@ -317,6 +317,7 @@
 }
 .project_main_block .description{
     display: flex;
+    padding-left: 70px;
     flex-direction: column;
     justify-content: flex-start;
 }
@@ -353,12 +354,14 @@
     display: flex;
     position: absolute;
     top: 0;
+    z-index: 1;
     height: 100%;
     left: 0;
     width: 100%;
     background: rgba(0,0,0,0);
     justify-content: center;
-    align-items: center;opacity: 0;
+    align-items: center;
+    opacity: 0;
     cursor: pointer;
 
     transition: all .5s;
