--- a/css/about.css
+++ b/css/about.css
@@ -9,26 +9,31 @@
     position: initial;
     width: initial;
 }
-
+.carousel_block{
+     max-width: 1200px;
+     position: relative;
+    margin: auto;
+}
 .main_about {
-    padding-top: 40px;
-    /*background-image: url(../img/about_bg.png);*/
-    background-position: 0px 100px;
-    background-repeat-y: no-repeat;
-    background-size: cover;
+    /*padding-top: 40px;*/
+    /*!*background-image: url(../img/about_bg.png);*!*/
+    /*background-position: 0px 100px;*/
+    /*background-repeat-y: no-repeat;*/
+    /*background-size: cover;*/
     background-color: #FFFBF6;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
+    /*width: 100%;*/
+    /*height: 100vh;*/
+    /*display: flex;*/
+    /*align-items: center;*/
+    height: 100%;
     overflow: hidden;
 }
 
-.staff_view {
-    opacity: 0;
-    transform: translate(-200px, 25px);
+/*.staff_view {*/
+/*    opacity: 0;*/
+/*    transform: translate(-200px, 25px);*/
 
-}
+/*}*/
 
 
 .circle__item {
@@ -61,52 +66,51 @@
     position: absolute;
     display: flex;
     justify-content: flex-end;
-    right: 40px;
-    top: 50px;
+    left: 23%;
+    top: 62px;
+    transform: translateX(-21%)
 }
 
-.worker {
-    border-radius: 50%;
-    position: relative;
-    display: flex;
-    margin: 4px auto;
-    width: 260px;
-    height: 356px;
-    background-color: rgba(0, 0, 0, .3);
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-
-}
-
-.worker.worker__show .worker__about {
-    z-index: 5;
-    top: initial;
-
-    transition: all .5s;
-}
-
-.worker .worker__photo {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
-
-.worker__about {
-    z-index: 0;
+.worker_about {
+    z-index: -1;
+    opacity: 0;
+    top: 15px;
     display: flex;
     position: absolute;
-    width: 225px;
+    width: 175px;
     border-radius: 50%;
     background: rgba(35, 80, 75, .7);
     height: 91%;
+    left: 50%;
     flex-direction: column;
-    top: 400px;
+    align-items: center;
     justify-content: center;
+    transform: translateX(-50%);
 
+    transition: all .5s;
+}
+.worker_content:hover .worker_about{
+    z-index: 0;
+    opacity: 1;
+ }
+
+
+.worker_content:hover{
+    z-index: 2;
+}
+.workers_block{
+    margin-top: 140px;
+    display: flex;
+    justify-content: space-between;
+}
+.worker_content{
+    border-radius: 50%;
+    text-align: center;
+    position: relative;
+    max-width: 190px;
 }
 
-.worker__about .worker__name {
+.worker_about .worker__name {
     font-size: 18px;
     color: #fff;
     text-align: center;
@@ -114,7 +118,7 @@
     font-weight: 400;
 }
 
-.worker__about .worker__role {
+.worker_about .worker__role {
     font-size: 14px;
     color: #fff;
     text-align: center;
@@ -122,53 +126,138 @@
     font-weight: 200;
 }
 
-.worker_1_col {
-    position: relative;
-    left: 100px;
-    top: 30px;
-    z-index: 0;
+.worker_content .worker_img{
+    width: 100%;
+    border-radius: 50%;
 }
-
-.worker_2_col {
-    position: relative;
-    top: 80px;
-    z-index: 0;
+.workers_content_change_1{
+    position: absolute;
+    top: 65%;
+    left: 14%;
+    transform: translateX(-4%);
 }
-
-.worker_3_col {
-    position: relative;
-    right: 110px;
-    top: 48px;
-    z-index: 0;
+.workers_content_change_2{
+    position: absolute;
+    top: 64%;
+    left: 42%;
+    transform: translateX(-2%);
 }
-
-.worker_4_col {
-    position: relative;
-    bottom: 75px;
-    left: 20px;
-    z-index: 0;
-}
-
-.worker_5_col {
-    position: relative;
-    bottom: 115px;
-    z-index: 0;
-}
-
-.worker_6_col {
-    position: relative;
-    bottom: 90px;
-    right: 25px;
-    z-index: 0;
+.workers_content_change_3{
+    position: absolute;
+    top: 65%;
+    left: 70%;
+    transform: translateX(-5%);
 
 }
 
-.worker_7_col {
-    position: relative;
-    bottom: 120px;
-    right: 50px;
-    z-index: 0;
-}
+
+/*.worker {*/
+/*    border-radius: 50%;*/
+/*    position: relative;*/
+/*    display: flex;*/
+/*    margin: 4px auto;*/
+/*    width: 260px;*/
+/*    height: 356px;*/
+/*    background-color: rgba(0, 0, 0, .3);*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    overflow: hidden;*/
+
+/*}*/
+
+/*.worker.worker__show .worker__about {*/
+/*    z-index: 5;*/
+/*    top: initial;*/
+
+/*    transition: all .5s;*/
+/*}*/
+
+/*.worker .worker__photo {*/
+/*    object-fit: cover;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*}*/
+
+/*.worker__about {*/
+/*    z-index: 0;*/
+/*    display: flex;*/
+/*    position: absolute;*/
+/*    width: 225px;*/
+/*    border-radius: 50%;*/
+/*    background: rgba(35, 80, 75, .7);*/
+/*    height: 91%;*/
+/*    flex-direction: column;*/
+/*    top: 400px;*/
+/*    justify-content: center;*/
+
+/*}*/
+
+/*.worker__about .worker__name {*/
+/*    font-size: 18px;*/
+/*    color: #fff;*/
+/*    text-align: center;*/
+/*    text-transform: capitalize;*/
+/*    font-weight: 400;*/
+/*}*/
+
+/*.worker__about .worker__role {*/
+/*    font-size: 14px;*/
+/*    color: #fff;*/
+/*    text-align: center;*/
+/*    text-transform: capitalize;*/
+/*    font-weight: 200;*/
+/*}*/
+
+/*.worker_1_col {*/
+/*    position: relative;*/
+/*    left: 100px;*/
+/*    top: 30px;*/
+/*    z-index: 0;*/
+/*}*/
+
+/*.worker_2_col {*/
+/*    position: relative;*/
+/*    top: 80px;*/
+/*    z-index: 0;*/
+/*}*/
+
+/*.worker_3_col {*/
+/*    position: relative;*/
+/*    right: 110px;*/
+/*    top: 48px;*/
+/*    z-index: 0;*/
+/*}*/
+
+/*.worker_4_col {*/
+/*    position: relative;*/
+/*    bottom: 75px;*/
+/*    left: 20px;*/
+/*    z-index: 0;*/
+/*}*/
+
+/*.worker_5_col {*/
+/*    position: relative;*/
+/*    bottom: 115px;*/
+/*    z-index: 0;*/
+/*}*/
+
+/*.worker_6_col {*/
+/*    position: relative;*/
+/*    bottom: 90px;*/
+/*    right: 25px;*/
+/*    z-index: 0;*/
+
+/*}*/
+
+/*.worker_7_col {*/
+/*    position: relative;*/
+/*    bottom: 120px;*/
+/*    right: 50px;*/
+/*    z-index: 0;*/
+/*}*/
+
+
+
 
 /*contact us page css*/
 .bg-baner {
