--- a/css/aboutMedia.css
+++ b/css/aboutMedia.css
@@ -1,105 +1,178 @@
-@media(max-width:1159px) {
+@media (max-width: 1199px) {
 
-    .worker_main.worker_1_col {
-        top: 80px;
+}
+
+@media (max-width: 992px) {
+    .workers_block .worker_content{
+        max-width: 210px;
     }
-
-    .worker_main.worker_2_col {
-        top: 80px;
-        right: 40px;
+    .workers_block .workers_content_change_1{
+        top: 73%;
+        left: 20%;
     }
-
-    .worker_main.worker_3_col {
-        top: -65px;
-        left: 30px;
+    .workers_block .workers_content_change_2{
+        top: 25%;
+        left: 38%;
     }
-
-    div.main_about {
-        padding-top: 0px;
-    }
-
-    .staff_view {
-        transform: translateY(0px);
+    .workers_block .workers_content_change_3{
+        top: 71%;
+        left: 58%;
     }
 }
-@media (max-width: 991px){
-    .heder-nav .nav-toggle {
-        right: 80px !important;
-    }
-}
-@media (max-width: 850px) {
-    .worker_main .worker{
-        width: 220px ;
-        height: 305px;
-        margin: initial;
-    }
-    .worker .worker__about{
-        width: 195px;
-        height: 90%;
-    }
-    .worker_main.worker_1_col{
-        left: initial;
-        top: 30px;
-        right: -15px;
 
+@media (max-width: 767px) {
+    .main_about .carousel_block{
+        max-width: 585px;
     }
-    .worker.worker_1{
-        margin-left: auto;
+    .carousel_block .workers_block{
+        margin-top: 74px;
+        justify-content: center;
+        flex-wrap: wrap;
     }
-
-    .worker_main.worker_2_col{
-        top: 30px;
-        right: initial;
-        left: -15px;
-    }
-    .worker_main.worker_3_col{
-        top: 30px;
-        right: -15px;
-        left: initial;
-    }
-    .worker.worker_3{
-        margin-left: auto;
-    }
-    .worker_main.worker_4_col{
-        left: -15px;
-        bottom: initial;
-        top: 30px;
+    .workers_block .worker_content{
+        max-width: 196px;
     }
     .carousel_staff .loader_carousel {
         justify-content: center;
-        right: 50%;
-        transform: translateX(50%);
+        left: 50%;
+        transform: translateX(-50%);
         top: 50%;
         z-index: 99;
     }
     .circle__spinner .path {
         stroke: #23504B !important;
-
-    }
-}
-@media (max-width: 500px) {
-    .worker_main .worker {
-        width: 100%;
-        height: 100%;
-    }
-    .worker .worker__about {
-        width: 80%;
-        height: 90%;
-    }
-    .worker .worker__about .worker__name {
-        font-size: 14px;
     }
 
-    .worker .worker__about .worker__role {
-        font-size: 12px;
+}
+@media(max-width:576px){
+    .main_about .carousel_block{
+        max-width: 480px;
+    }
+    .carousel_block .workers_block{
+        margin-top: 78px;
+    }
+    .workers_block .worker_content{
+        max-width: 175px;
+    }
+    .worker_content .worker_about{
+        width: 158px;
+    }
+    .carousel_staff .loader_carousel{
+        top: 50%;
     }
 }
-@media (max-width: 360px) {
-    .worker .worker__about .worker__name{
-        font-size: 12px;
-        margin-bottom: 4px;
+@media (max-width: 400px) {
+    .workers_block .worker_content{
+        max-width: 142px;
     }
-    .worker .worker__about .worker__role {
-        font-size: 11px;
+    .carousel_staff .loader_carousel{
+        top: 51%;
     }
 }
+/*@media(max-width:1159px) {*/
+
+/*    .worker_main.worker_1_col {*/
+/*        top: 80px;*/
+/*    }*/
+
+/*    .worker_main.worker_2_col {*/
+/*        top: 80px;*/
+/*        right: 40px;*/
+/*    }*/
+
+/*    .worker_main.worker_3_col {*/
+/*        top: -65px;*/
+/*        left: 30px;*/
+/*    }*/
+
+/*    div.main_about {*/
+/*        padding-top: 0px;*/
+/*    }*/
+
+/*    .staff_view {*/
+/*        transform: translateY(0px);*/
+/*    }*/
+/*}*/
+@media (max-width: 991px){
+    .heder-nav .nav-toggle {
+        right: 80px !important;
+    }
+}
+
+/*@media (max-width: 850px) {*/
+/*    .worker_main .worker{*/
+/*        width: 220px ;*/
+/*        height: 305px;*/
+/*        margin: initial;*/
+/*    }*/
+/*    .worker .worker__about{*/
+/*        width: 195px;*/
+/*        height: 90%;*/
+/*    }*/
+/*    .worker_main.worker_1_col{*/
+/*        left: initial;*/
+/*        top: 30px;*/
+/*        right: -15px;*/
+
+/*    }*/
+/*    .worker.worker_1{*/
+/*        margin-left: auto;*/
+/*    }*/
+
+/*    .worker_main.worker_2_col{*/
+/*        top: 30px;*/
+/*        right: initial;*/
+/*        left: -15px;*/
+/*    }*/
+/*    .worker_main.worker_3_col{*/
+/*        top: 30px;*/
+/*        right: -15px;*/
+/*        left: initial;*/
+/*    }*/
+/*    .worker.worker_3{*/
+/*        margin-left: auto;*/
+/*    }*/
+/*    .worker_main.worker_4_col{*/
+/*        left: -15px;*/
+/*        bottom: initial;*/
+/*        top: 30px;*/
+/*    }*/
+/*    .carousel_staff .loader_carousel {*/
+/*        justify-content: center;*/
+/*        right: 50%;*/
+/*        transform: translateX(50%);*/
+/*        top: 50%;*/
+/*        z-index: 99;*/
+/*    }*/
+/*    .circle__spinner .path {*/
+/*        stroke: #23504B !important;*/
+
+/*    }*/
+/*}*/
+
+/*@media (max-width: 500px) {*/
+/*    .worker_main .worker {*/
+/*        width: 100%;*/
+/*        height: 100%;*/
+/*    }*/
+/*    .worker .worker__about {*/
+/*        width: 80%;*/
+/*        height: 90%;*/
+/*    }*/
+/*    .worker .worker__about .worker__name {*/
+/*        font-size: 14px;*/
+/*    }*/
+
+/*    .worker .worker__about .worker__role {*/
+/*        font-size: 12px;*/
+/*    }*/
+/*}*/
+/*@media (max-width: 360px) {*/
+/*    .worker .worker__about .worker__name{*/
+/*        font-size: 12px;*/
+/*        margin-bottom: 4px;*/
+/*    }*/
+/*    .worker .worker__about .worker__role {*/
+/*        font-size: 11px;*/
+/*    }*/
+/*}*/
